History for xm.theme
====================

(name of developer listed in brackets)

0.9 (unreleased)
----------------

- Moved the employees_overview page to Products.eXtremeManagement.
  [maurits]

- Made the employees overview page much much faster.  The billable
  percentages are not quite the same as from the bookings per month
  pages they point to, but that is for another day.  [maurits]

- Protecting the big employees overview page with the Manage Portal
  permission now.  [maurits]


0.8 (2008-09-16)
----------------

- Added locales/en to work around i18n bug: with e.g. Dutch and
  English as allowed languages, Dutch as site default, English as
  browser language (the only one or not), you would get Dutch for all
  translations in the xm.theme domain, even though the rest of the UI
  is in English... [maurits]

- Fixed the livesearch.js customization to work with Plone 3.1.x We have to drop
  support for Plone 3.0.x for this one, because jquery.js is not available.
  [jladage]


0.7.3 (2008-08-01)
------------------

- Use gradient image in booking-per-month table heading.  [mirella]
  (Moved from Products.eXtremeManagement trunk by Maurits.)

- Made gradient images bigger in height for layout reasons. [mirella]

- Fixed name typo in css. [mirella]

- Placed the gradient images in bottom in the used classes. [mirella]

- Added translations and description for employees overview. [mirella]

- Added odd color and padding to employees overview. [mirella]

- Started HISTORY.txt (merged from 0.7.2).  [maurits]



0.7 (2008-05-15)
----------------

- No history recorded.


0.6 (2008-03-31)
----------------

- No history recorded.


0.5 (2008-03-03)
----------------

- No history recorded.


0.4 (2008-02-27)
----------------

- No history recorded.


0.3 (2008-02-26)
----------------

- No history recorded.


0.2 (2008-02-25)
----------------

- No history recorded.